--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie-list",
   "version": "0.0.0",
   "scripts": {
+    "server": "dotnet run",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
