--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "movie-list",
   "version": "0.0.0",
   "scripts": {
-    "server": "dotnet run",
+    "server":"cd server && dotnet run",
+    "start-dev": "NODE_ENV='development' ng build && NODE_ENV='development' npm run server",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
