--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "server":"cd server && dotnet run",
     "start-dev": "NODE_ENV='development' ng build && NODE_ENV='development' npm run server",
+    "start-prod": "NODE_ENV='production' ng build && NODE_ENV='production' npm run server",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run start-prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
