--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start-dev": "NODE_ENV='development' ng build && NODE_ENV='development' npm run server",
     "start-prod": "NODE_ENV='production' ng build && NODE_ENV='production' npm run server",
     "ng": "ng",
-    "start": "npm run start-prod",
+    "start": "npm run server",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
