--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "~7.2.0",
     "axios": "^0.18.0",
     "core-js": "^2.5.4",
+    "ngx-device-detector": "^1.3.5",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
